# clawGate

./: .gitignore  Cargo.toml  README.md  config.yaml
doc/: ARCHITECTURE.md
scripts/: backends.sh  gen_jwt.sh  stop_backends.sh
src/: admin.rs  balancer.rs  config.rs  dashboard.rs  etcd_config.rs  gossip.rs  health.rs  main.rs  persistence.rs  proxy.rs  rate_limiter.rs  router.rs  tui.rs
src/middleware/: auth.rs  ip_rules.rs  mod.rs  request_id.rs
