[package]
name = "clawgate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
crossterm = "0.29.0"
notify = "8.2.0"
ratatui = "0.30.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["buffer", "limit"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
