[package]
name = "clawgate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
crossterm = "0.29.0"
ipnetwork = "0.21.1"
jsonwebtoken = "10.3.0"
notify = "8.2.0"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = "0.13.2"
rustc-hash = "2.1.1"
dashmap = "6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }
tower = { version = "0.5.3", features = ["buffer", "limit"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.44"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
